[package]
name = "pawnscraper"
version = "0.2.2"
authors = ["Sreyas <sreyassreelal@gmail.com>"]
edition = "2018"

[lib]
name = "pawnscraper"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
samp = {git="https://github.com/Pycckue-Bnepeg/samp-rs/"}
log = "0.4.6"
fern = "0.5.7"
scraper  = "0.17.1"
minihttp = {git = "https://github.com/Sreyas-Sreelal/minihttp"}
encoding = "0.2.33"
